tests/baselines/reference/indexedAccessPrivateMemberOfGenericConstraint2.errors.txt
indexedAccessPrivateMemberOfGenericConstraint2.ts(9,24): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(9,32): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(10,27): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(11,27): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(12,37): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(13,37): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(14,23): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(15,37): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(16,37): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(26,25): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(26,33): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(27,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(28,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(29,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(30,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(31,24): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(32,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(33,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(43,33): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(44,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(45,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(46,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(47,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(48,24): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(49,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(50,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(60,25): error TS2536: Type '"a"' cannot be used to index type 'T'.
indexedAccessPrivateMemberOfGenericConstraint2.ts(60,33): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(61,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(62,28): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(63,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(64,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(65,24): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(66,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
indexedAccessPrivateMemberOfGenericConstraint2.ts(67,38): error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.


==== indexedAccessPrivateMemberOfGenericConstraint2.ts (35 errors) ====
    class A {
      declare private a: { foo: number };
    }
    
    class B {
      declare private a: { bar: string };
    }
    
    type X<T extends A> = [T["a"], (T | B)["a"]];
                           ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
                                   ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Y<T extends A | B> = T["a"];
                              ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Z<T extends A & B> = T["a"];
                              ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type R<T extends A, T2 extends B> = (T | T2)["a"];
                                        ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type S<T extends B, T2 extends A> = (T | T2)["a"];
                                        ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type U<T extends A> = (T & B)["a"];
                          ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type V<T extends A, T2 extends B> = (T & T2)["a"];
                                        ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type W<T extends B, T2 extends A> = (T & T2)["a"];
                                        ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    
    class C {
      declare private a: { foo: number };
    }
    
    class D {
      declare a: { bar: string };
    }
    
    type X2<T extends C> = [T["a"], (T | D)["a"]];
                            ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
                                    ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Y2<T extends C | D> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Z2<T extends C & D> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type R2<T extends C, T2 extends D> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type S2<T extends D, T2 extends C> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type U2<T extends C> = (T & D)["a"];
                           ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type V2<T extends C, T2 extends D> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type W2<T extends D, T2 extends C> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    
    class E {
      declare a: { foo: number };
    }
    
    class F {
      declare private a: { bar: string };
    }
    
    type X3<T extends E> = [T["a"], (T | F)["a"]];
                                    ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Y3<T extends E | F> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Z3<T extends E & F> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type R3<T extends E, T2 extends F> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type S3<T extends F, T2 extends E> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type U3<T extends E> = (T & F)["a"];
                           ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type V3<T extends E, T2 extends F> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type W3<T extends F, T2 extends E> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    
    class G {
      declare b: { foo: number };
    }
    
    class H {
      declare private a: { bar: string };
    }
    
    type X4<T extends G> = [T["a"], (T | H)["a"]];
                            ~~~~~~
!!! error TS2536: Type '"a"' cannot be used to index type 'T'.
                                    ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Y4<T extends G | H> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type Z4<T extends G & H> = T["a"];
                               ~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type R4<T extends G, T2 extends H> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type S4<T extends H, T2 extends G> = (T | T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type U4<T extends G> = (T & H)["a"];
                           ~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type V4<T extends G, T2 extends H> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    type W4<T extends H, T2 extends G> = (T & T2)["a"];
                                         ~~~~~~~~~~~~~
!!! error TS4105: Private or protected member 'a' cannot be accessed on a type parameter.
    